# conan-Jenkins-test

./: Jenkinsfile  build.sh  conanfile.py  report.md
src/: CMakeLists.txt  conanfile.py  requirements.txt
